# learn_fast_api

./: .gitignore  Dockerfile  pyproject.toml
src/: index.html  main.py  test_fast_api_html.py  test_get_request.py  test_post_request.py
src/database/: database.py
src/database/db_models/: tasks_orm_model.py
src/database/engine/: session_maker.py
src/database/repositories/: repository.py
src/models/: tasks_model.py  user_model.py
src/routes/: tasks_routes.py
src/schemas/: tasks_model.py
